# qrcode-generator

./: .cspell.json  .eslintignore  .eslintrc.js  .gitignore  .prettierignore  .prettierrc.json  .stylelintrc.json  CHANGELOG.md  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tailwind.config.js  tsconfig.base.json  vite.config.ts
.cspell/: custom-words.txt
.husky/: pre-commit
desktop/: package.json
desktop/src/: main.js  preload.js
site/: index.html  package.json  site.config.ts  tsconfig.app.json  tsconfig.vitest.json  vite.config.ts
site/src/: App.vue  main.ts
site/src/components/: index.ts
site/src/constants/: candidates.ts  index.ts  router.ts  sideMenu.ts  siteMetaData.ts  testConsts.ts  testData.ts  testDataConsts.ts
site/src/database/: index.ts
site/src/hooks/: index.ts  useLoading.ts  useValidationStatus.ts
site/src/interfaces/: sideMenu.ts  siteMetaData.ts
site/src/modules/: index.ts
site/src/router/: index.ts
site/src/store/: index.ts  sideMenu.ts
site/src/tools/: index.ts
site/src/types/: db.ts  (+7 more)
src/: App.vue  main.ts
src/constants/: index.ts  siteMetaData.ts  testData.ts
src/hooks/: index.ts  useSiteMetaData.ts
src/interfaces/: index.ts  siteMetaData.ts
src/modules/: index.ts  naive.ts  nprogress.ts  qrcode.ts
src/router/: index.ts
web/: .eslintrc-auto-import.json  app.config.ts  auto-imports.d.ts  components.d.ts  package.json  site.config.ts  tsconfig.app.json  tsconfig.json  vite.config.ts
web/src/: App.vue  main.ts
web/src-tauri/: Cargo.toml  tauri.conf.json
web/src-tauri/icons/: icon.icns
(+86 files in other folders)
